# bronson_online

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  STYLEGUIDE.md  diesel.toml  docker-compose.yaml
data/: F24_raw.csv  alias_table.json  backup.json  buildings.json  campus.csv  campus.json  dummy_login.xml  dummy_ticket.json  roomConfig.csv  roomConfig_agg.csv  techSchedule.json  tickets.json
data/wiki_articles/: Admin Users.txt  Bronson.txt  CamCode.txt  Checkerboard.txt  Dashboard.txt  JackNet.txt  README.md  Tickex.txt
docker/: Dockerfile
html-css-js/: 404.html  F24_raw.csv  admin_tools.js  aggregate_schedules.py  bronson-manager.js  camcode.js  campus.csv  campus.json  cc-altmode.js  checkerboard.js  index.html  index_admin.html  index_guest.html  jacknet.js  login.html  main.js  page.css  process-csv.py  roomConfig.csv  schedule_F.csv  schedule_M.csv  schedule_R.csv  schedule_T.csv  schedule_W.csv  serviceworker.js  signing.js  terminal.js  tickex.js  wiki.js
md/: test_file0.md  test_file1.md  test_file2.md
migrations/2025-07-03-150524_bronson/: down.sql  up.sql
src/: .lib.rs.swp  aggregate_schedules.py  campus.json  jack_ping.rs  lib.rs  models.rs  ping_g.c  ping_this  process-csv.py  schema.rs
src/JackNet/: README.md  campus.json  jacknet.js  test.js
src/checkerboard/: checkerboard.js
