[package]
name = "server_lib"
version = "1.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
lambda_http = "0.12.0"
reqwest = { version = "0.12.5", features = ["cookies", "blocking", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
getopts = "0.2"
pinger = "1.2.3"
local-ip-address = "0.6.1"
csv = "1.3.0"
regex = "1.10.6"
chrono = "0.4.38"
urlencoding = "2.1.3"
cookie = "0.18.1"
