[package]
name = "server_lib"
version = "1.6.1"
edition = "2021"

[dependencies]
futures = "0.3.30"
lambda_http = "0.12.0"
reqwest = { version = "0.12.5", features = ["cookies", "blocking", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
getopts = "0.2"
pinger = "1.2.3"
local-ip-address = "0.6.1"
csv = "1.3.0"
regex = "1.10.6"
chrono = "0.4.38"
urlencoding = "2.1.3"
cookie = "0.18.1"
log = "0.4.27"
fern = "0.7.1"
humantime = "2.2.0"

# Default dev level options
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'
strip = "none"
debug-assertion = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# Default release level options
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false